=== rmw ChangeLog ===

2017-12-25

    Portuguese (pt_PT) translation added / thanks @jmrodriguesgoncalves


2017-12-20

    rmw-0.4.01 released

2017-12-15

    Polish and Nepali translations added. Thanks @suve and @ramdahal

    Nepali man page added.

2017-12-08

    Finnish translation added / thanks @sapake


2017-12-07

    The log entry from 2017-12-06 is now obsolete. If purge_after is > 0, rmw
    will only  show the message "purge has been skipped: use -f or --force"
    once a day, regardless of verbosity level. This still improves the behavior
    where that message would display every time if --force wasn't used (or if
    "force_not_required" was used in the config file).

2017-12-06

    rmw will now only show the message "purge has been skipped: use -f or
    --force" if verbose mode is on.

2017-12-02

    [#125] Implemented ncurses for --select feature.

2017-11-30

    [#126] using extra force at runtime (-ff) will now prevent messages
    such as "Directory not purged - still contains files" when purging
    directories that contain non-writable subdirectories.


2017-11-29

    new feature for testing added
      setting the RMWTRASH environmental variable to "fake-year" will write
      the year 1999 to the DeletionDate string in the .trashinfo file.

      Ex: `RMWTRASH=fake-year rmw some.txt temp.asc files.doc`

      Then run rmw with the purge option: `rmw -fg`

2017-11-26

    Martijn de Boer tested rmw on his MacOSX system today. To get a complete build,
    the only thing he needed was an additional line: '#include <locale.h>`.
    I've updated a couple spots on the rmw repo and wiki to indicate the rmw is
    a "Linux and MacOS utility".

2017-11-22

    -t --translate option added
        After translations are added, this option will display a translation
        of a default configuration file.

    strings prepared for translation, portable object template completed

2017-11-21

    Version number changed to 0.4.00

2017-11-17
