@@ -116,6 +116,8 @@ enum {
   EXIT_MALLOC,
   EXIT_OPENDIR_FAILURE,
   DATA_DIR_CREATED,
+  MAKE_DIR_SUCCESS,
+  MAKE_DIR_FAILURE,
   FORCE_NOT_USED,
   IS_NEW_DAY,
   IS_SAME_DAY,
